src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__lifetime_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Lifetime(
                                LifetimeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 5,
                                            end: 7,
                                            start_line: 1,
                                            start_col: 6,
                                        },
                                    },
                                    bounds: [],
                                    span: Span {
                                        start: 5,
                                        end: 7,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 4,
                            end: 8,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                ),
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 3,
                                    },
                                    span: Span {
                                        start: 9,
                                        end: 10,
                                        start_line: 1,
                                        start_col: 10,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 9,
                                end: 10,
                                start_line: 1,
                                start_col: 10,
                            },
                        },
                        ty: Type {
                            kind: Reference {
                                lifetime: Some(
                                    Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 13,
                                            end: 15,
                                            start_line: 1,
                                            start_col: 14,
                                        },
                                    },
                                ),
                                mutable: false,
                                inner: Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 4,
                                                        },
                                                        span: Span {
                                                            start: 16,
                                                            end: 19,
                                                            start_line: 1,
                                                            start_col: 17,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 16,
                                                end: 19,
                                                start_line: 1,
                                                start_col: 17,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 16,
                                        end: 19,
                                        start_line: 1,
                                        start_col: 17,
                                    },
                                },
                            },
                            span: Span {
                                start: 12,
                                end: 19,
                                start_line: 1,
                                start_col: 13,
                            },
                        },
                        span: Span {
                            start: 9,
                            end: 19,
                            start_line: 1,
                            start_col: 10,
                        },
                    },
                ],
                return_type: Some(
                    Type {
                        kind: Reference {
                            lifetime: Some(
                                Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 25,
                                        end: 27,
                                        start_line: 1,
                                        start_col: 26,
                                    },
                                },
                            ),
                            mutable: false,
                            inner: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 4,
                                                    },
                                                    span: Span {
                                                        start: 28,
                                                        end: 31,
                                                        start_line: 1,
                                                        start_col: 29,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 28,
                                            end: 31,
                                            start_line: 1,
                                            start_col: 29,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 28,
                                    end: 31,
                                    start_line: 1,
                                    start_col: 29,
                                },
                            },
                        },
                        span: Span {
                            start: 24,
                            end: 31,
                            start_line: 1,
                            start_col: 25,
                        },
                    },
                ),
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Path(
                                    ExprPath {
                                        segments: [
                                            ExprPathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Span {
                                                        start: 34,
                                                        end: 35,
                                                        start_line: 1,
                                                        start_col: 35,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 34,
                                            end: 35,
                                            start_line: 1,
                                            start_col: 35,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 34,
                                    end: 35,
                                    start_line: 1,
                                    start_col: 35,
                                },
                            },
                        ),
                        span: Span {
                            start: 32,
                            end: 37,
                            start_line: 1,
                            start_col: 33,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 37,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 37,
        start_line: 1,
        start_col: 1,
    },
}
