src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__linear_type_param.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 10,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: Some(
                            Linear,
                        ),
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 18,
                                        end: 24,
                                        start_line: 1,
                                        start_col: 19,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 18,
                                end: 24,
                                start_line: 1,
                                start_col: 19,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 26,
                                                    end: 32,
                                                    start_line: 1,
                                                    start_col: 27,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 26,
                                        end: 32,
                                        start_line: 1,
                                        start_col: 27,
                                    },
                                },
                            ),
                            span: Span {
                                start: 26,
                                end: 32,
                                start_line: 1,
                                start_col: 27,
                            },
                        },
                        span: Span {
                            start: 11,
                            end: 32,
                            start_line: 1,
                            start_col: 12,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 34,
                            end: 36,
                            start_line: 1,
                            start_col: 35,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 36,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 36,
        start_line: 1,
        start_col: 1,
    },
}
